@@ -54,10 +54,6 @@ sub new {
 	return $self;
 }
 
-sub aui {
-	$_[0]->GetParent->aui;
-}
-
 
 
 
